@@ -17,7 +17,7 @@ Authors
 =======
 
 Source code:
-  2005 - 2013 Harri Pitkänen (hatapitk@iki.fi)
+  2005 - 2014 Harri Pitkänen (hatapitk@iki.fi)
 Icon:
   2011 Tarja Lindfors (tarja@puimula.org)
 
