@@ -62,11 +62,6 @@ static ::cppu::ImplementationEntry const regEntries[] = {
 	{ 0, 0, 0, 0, 0, 0 }
 };
 
-extern "C" SAL_DLLPUBLIC_EXPORT sal_Bool SAL_CALL component_writeInfo(void * serviceManager, void * registryKey) {
-	VOIKKO_DEBUG("component_writeInfo");
-	return ::cppu::component_writeInfoHelper(serviceManager, registryKey, regEntries);
-}
-
 extern "C" SAL_DLLPUBLIC_EXPORT void * SAL_CALL
 	component_getFactory(const char * implName, void * serviceManager, void * registryKey) {
 	VOIKKO_DEBUG("component_getFactory");
